<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">rIron</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="current_exercise">Current Exercise</string>
    <string name="random_button">Random Exercise</string>
    <string name="exercise_reps">Reps</string>
    <string name="exercise_weight">Weight</string>
    <string name="button_reps_inc">+</string>
    <string name="button_reps_dec">-</string>
    <string name="button_weight_inc">+</string>
    <string name="button_weight_dec">-</string>
    <string name="exercise_reps_value">0</string>
    <string name="exercise_weight_value">0</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>

</resources>
